--- a/app/styles/pods.scss
+++ b/app/styles/pods.scss
@@ -1,2 +1,4 @@
-@import "app/home/style";
+@import "variables";
+@import "app/root/style";
+@import "app/root/home/style";
 @import "app/components/part-client-map/style";
