--- a/app/root/home/template.hbs
+++ b/app/root/home/template.hbs
@@ -4,7 +4,7 @@
       <button class="btn btn-danger">5kg干粉灭火器 >></button>
    </section>
    <section id="section-2">
-      <h4 class="m-a">维修中心</h4>
+      <h4>维修中心</h4>
       <ul class="list-unstyled col-md-4">
          {{#each productListCol1 as |product|}}
          <li class="card-block">
@@ -44,15 +44,38 @@
       <div class="clearfix"></div>
    </section>
    <section id="section-3">
-      <h4 class="m-a">客户企业</h4>
+      <h4>客户企业</h4>
       <div id="intro" class="label label-info m-b p-a-s">我们服务于天津市二十多家大型企业</div>
       <div class="">
          {{#part-client-map clientList=clientList}}{{/part-client-map}}
       </div>
    </section>
    <section id="section-4">
-      <img src="/images/home-2.jpg">
-      <div id="qa" class="card-img-overlay">
+      <div class="col-md-6" id="contact">
+         <h4>联系我们</h4>
+         <div class="col-md-6">
+            <h6>天津市金凯达成消防设备有限公司</h6>
+            <small>红桥区芥园道明华里1号楼3门102号底商</small>
+            <img src="images/certificate.jpg">
+         </div>
+         <div class="col-md-6">
+            <div><strong>联系人:</strong> 李经理</div>
+            <div><strong>电话:</strong> 13821777119</div>
+            <div><strong>邮箱:</strong> 13802123455@163.com</div>
+         </div>
+      </div>
+      <div class="col-md-6">
+         <h4>常见问题</h4>
+            <ul>
+               {{#each QAList as |qa|}}
+                  <li>
+                     <a>{{qa.q.title}}</a>
+                  </li>
+               {{/each}}
+            </ul>
+      </div>
+      <div class="clearfix"></div>
+      <!--       <div id="qa" class="card-img-overlay">
          <div class="popover popover-right ask">
             <div class="popover-arrow"></div>
             <h3 class="popover-title">为什么选择金凯达成消防?</h3>
@@ -91,7 +114,7 @@
             </div>
          </div>
          <div class="clearfix"></div>
-      </div>
+      </div> -->
       <!-- <img src="/images/tianjin-explosion-2015.jpg"> -->
    </section>
 </div>
