--- a/app/components/part-client-map/style.scss
+++ b/app/components/part-client-map/style.scss
@@ -1,13 +1,13 @@
-#client-map {
-   position: relative;
+#part-client-map {
    #bmap {
-      display: inline-block;
-      vertical-align: top;
       .anchorBL {
          display: none;
       }
-      width: 100%;
-      height: 600px;
+      position: absolute;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      left: 0;
    }
    #client-list {
       display: inline-block;
