--- a/app/components/part-client-map/template.hbs
+++ b/app/components/part-client-map/template.hbs
@@ -1,6 +1,6 @@
-<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=Pvahh0ipVv9mZcHilpv7CXLi"></script>
+<!-- <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=Pvahh0ipVv9mZcHilpv7CXLi"></script> -->
 <!--百度地图容器-->
-<div id="client-map">
+<div id="part-client-map">
    <div id="bmap" class="img-thumbnail"></div>
    <ul id="client-list" class="list-unstyled p-a">
       <li class="label label-info m-b p-a-s">我们的客户</li>
