--- a/app/styles/pods.scss
+++ b/app/styles/pods.scss
@@ -1,4 +1,7 @@
 @import "variables";
 @import "app/root/style";
 @import "app/root/home/style";
+@import "app/root/contact/style";
 @import "app/components/part-client-map/style";
+@import "app/components/part-contact-map/style";
+@import "app/root/product/style";
