--- a/app/root/template.hbs
+++ b/app/root/template.hbs
@@ -1,17 +1,19 @@
 <nav class="navbar navbar-light navbar-fixed-top bg-faded">
-   {{#link-to "root.home" class="navbar-brand"}} 天津市金凯达成消防 {{/link-to}}
+   {{#link-to "root.home" class="navbar-brand"}}
+      <small>
+         <i class="fa fa-fire"></i>
+      </small>
+      天津市金凯达成消防
+   {{/link-to}}
    <ul class="nav navbar-nav">
-      <li class="nav-item active">
+      <li class="nav-item">
          {{#link-to "root.home" class="nav-link"}} 首页 {{/link-to}}
       </li>
       <li class="nav-item">
-         <a class="nav-link" href="#">所有产品</a>
+         {{#link-to "root.product" class="nav-link"}} 所有产品 {{/link-to}}
       </li>
       <li class="nav-item">
-         <a class="nav-link" href="#">业务服务</a>
-      </li>
-      <li class="nav-item">
-         <a class="nav-link" href="#">联系我们</a>
+         {{#link-to "root.contact" class="nav-link"}} 联系我们 {{/link-to}}
       </li>
    </ul>
    <!--          <form class="form-inline navbar-form-sm pull-right">
@@ -19,7 +21,9 @@
       <button class="btn btn-sm btn-success-outline" type="submit">搜索</button>
    </form> -->
 </nav>
-{{outlet}}
+<div id="root-body">
+   {{outlet}}
+</div>
 <footer>
    <hr>
    <div>
