Added an Adapter:Application

--- a/app/root/product/template.hbs
+++ b/app/root/product/template.hbs
@@ -2,13 +2,49 @@
    <div id="head">
       <img class="full" src="/images/home-3.jpg">
    </div>
-   <section id="section-1">
-      <table id="table-1" class="table">
+   <section>
+      <table class="table">
          <thead class="thead-default">
             <tr>
-               <th>灭火器</th>
+               <th># 灭火器</th>
                <th>名称</th>
                <th>规格</th>
+               <th>销售价</th>
+               <th>维修价</th>
+            </tr>
+         </thead>
+         <tbody>
+            <tr>
+               <th scope="row">1</th>
+               <td>ABC干粉灭火器</td>
+               <td>1kg</td>
+               <td>1元</td>
+               <td>1元</td>
+            </tr>
+            <tr>
+               <th scope="row">2</th>
+               <td>ABC干粉灭火器</td>
+               <td>5kg</td>
+               <td>1元</td>
+               <td>1元</td>
+            </tr>
+            <tr>
+               <th scope="row">3</th>
+               <td>二氧化碳灭火器</td>
+               <td>1kg</td>
+               <td>1元</td>
+               <td>1元</td>
+            </tr>
+         </tbody>
+      </table>
+   </section>
+   <section>
+      <table class="table">
+         <thead class="thead-default">
+            <tr>
+               <th># 报警器</th>
+               <th>名称</th>
+               <th>型号</th>
                <th>价格</th>
             </tr>
          </thead>
@@ -17,29 +53,31 @@
                <th scope="row">1</th>
                <td>Mark</td>
                <td>Otto</td>
-               <td>@mdo</td>
+               <td>1元</td>
             </tr>
             <tr>
                <th scope="row">2</th>
                <td>Jacob</td>
                <td>Thornton</td>
-               <td>@fat</td>
+               <td>1元</td>
             </tr>
             <tr>
                <th scope="row">3</th>
                <td>Larry</td>
                <td>the Bird</td>
-               <td>@twitter</td>
+               <td>1元</td>
             </tr>
          </tbody>
       </table>
+   </section>
+   <section>
       <table class="table">
          <thead class="thead-default">
             <tr>
-               <th>#</th>
-               <th>First Name</th>
-               <th>Last Name</th>
-               <th>Username</th>
+               <th># 疏散标志</th>
+               <th>名称</th>
+               <th>型号</th>
+               <th>价格</th>
             </tr>
          </thead>
          <tbody>
@@ -47,19 +85,19 @@
                <th scope="row">1</th>
                <td>Mark</td>
                <td>Otto</td>
-               <td>@mdo</td>
+               <td>1元</td>
             </tr>
             <tr>
                <th scope="row">2</th>
                <td>Jacob</td>
                <td>Thornton</td>
-               <td>@fat</td>
+               <td>1元</td>
             </tr>
             <tr>
                <th scope="row">3</th>
                <td>Larry</td>
                <td>the Bird</td>
-               <td>@twitter</td>
+               <td>1元</td>
             </tr>
          </tbody>
       </table>
