--- a/app/root/template.hbs
+++ b/app/root/template.hbs
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-light navbar-fixed-top bg-faded">
    {{#link-to "root.home" class="navbar-brand"}}
-      <small>
-         <i class="fa fa-fire"></i>
-      </small>
-      天津市金凯达成消防
+   <small>
+   <i class="fa fa-fire"></i>
+   </small>
+   天津市金凯达成消防
    {{/link-to}}
    <ul class="nav navbar-nav">
       <li class="nav-item">
@@ -16,10 +16,10 @@
          {{#link-to "root.contact" class="nav-link"}} 联系我们 {{/link-to}}
       </li>
    </ul>
-   <!--          <form class="form-inline navbar-form-sm pull-right">
-      <input class="form-control form-control-sm" type="text" placeholder="搜索产品">
-      <button class="btn btn-sm btn-success-outline" type="submit">搜索</button>
-   </form> -->
+   <form class="form-inline navbar-form pull-right">
+      {{input type="text" value=searchText class="form-control form-control" type="text" placeholder="搜索产品" key-up="search"}}
+      <button class="btn btn-success-outline" type="submit">搜索</button>
+   </form>
 </nav>
 <div id="root-body">
    {{outlet}}
