--- a/app/root/product/style.scss
+++ b/app/root/product/style.scss
@@ -3,4 +3,25 @@
       height: 500px;
       overflow: hidden;
    }
+   ul {
+      width: 100%;
+      span {
+         padding: $table-cell-padding;
+         display: inline-block;
+         min-width: 10rem;
+      }
+      span:nth-of-type(1) { width:10rem; }
+      span:nth-of-type(2) { width: calc(100% - 50rem); }
+      li:first-of-type {
+         background-color: $gray-lighter;
+         font-weight: bold;
+         color: $gray-dark;
+      }
+      li {
+         border-bottom: 1px solid $table-border-color;
+      }
+      li:last-of-type {
+         border-bottom: none;
+      }
+   }
 }
