--- a/app/root/product/template.hbs
+++ b/app/root/product/template.hbs
@@ -3,104 +3,81 @@
       <img class="full" src="/images/home-3.jpg">
    </div>
    <section>
-      <table class="table">
-         <thead class="thead-default">
-            <tr>
-               <th># 灭火器</th>
-               <th>名称</th>
-               <th>规格</th>
-               <th>销售价</th>
-               <th>维修价</th>
-            </tr>
-         </thead>
-         <tbody>
-            <tr>
-               <th scope="row">1</th>
-               <td>ABC干粉灭火器</td>
-               <td>1kg</td>
-               <td>1元</td>
-               <td>1元</td>
-            </tr>
-            <tr>
-               <th scope="row">2</th>
-               <td>ABC干粉灭火器</td>
-               <td>5kg</td>
-               <td>1元</td>
-               <td>1元</td>
-            </tr>
-            <tr>
-               <th scope="row">3</th>
-               <td>二氧化碳灭火器</td>
-               <td>1kg</td>
-               <td>1元</td>
-               <td>1元</td>
-            </tr>
-         </tbody>
-      </table>
+      <ul class="list-unstyled">
+         <li class="thead-default">
+            <span># 灭火器</span>
+            <span>名称</span>
+            <span>型号</span>
+            <span>销售价</span>
+            <span>维修价</span>
+         </li>
+         {{#if hasFilteredFireExtinguishers}}
+            {{#each filteredFireExtinguishers as |a idx|}}
+               <li>
+                  <span>{{idx}}</span>
+                  <span>{{a.name}}</span>
+                  <span>{{a.specification}}</span>
+                  <span>{{a.salePrice}}</span>
+                  <span>{{a.repairPrice}}</span>
+               </li>
+            {{/each}}
+         {{else}}
+            <li class="m-a">
+               <i class="fa fa-exclamation-triangle"></i>
+               <small>没有相关产品</small>
+            </li>
+         {{/if}}
+      </ul>
    </section>
    <section>
-      <table class="table">
-         <thead class="thead-default">
-            <tr>
-               <th># 报警器</th>
-               <th>名称</th>
-               <th>型号</th>
-               <th>价格</th>
-            </tr>
-         </thead>
-         <tbody>
-            <tr>
-               <th scope="row">1</th>
-               <td>Mark</td>
-               <td>Otto</td>
-               <td>1元</td>
-            </tr>
-            <tr>
-               <th scope="row">2</th>
-               <td>Jacob</td>
-               <td>Thornton</td>
-               <td>1元</td>
-            </tr>
-            <tr>
-               <th scope="row">3</th>
-               <td>Larry</td>
-               <td>the Bird</td>
-               <td>1元</td>
-            </tr>
-         </tbody>
-      </table>
+      <ul class="list-unstyled">
+         <li class="thead-default">
+            <span># 报警器</span>
+            <span>名称</span>
+            <span>型号</span>
+            <span>价格</span>
+         </li>
+         {{#if hasFilteredAlarms}}
+            {{#each filteredAlarms as |a idx|}}
+               <li>
+                  <span>{{idx}}</span>
+                  <span>{{a.name}}</span>
+                  <span>{{a.specification}}</span>
+                  <span>{{a.salePrice}}</span>
+               </li>
+            {{/each}}
+         {{else}}
+            <li class="m-a">
+               <i class="fa fa-exclamation-triangle"></i>
+               <small>没有相关产品</small>
+            </li>
+         {{/if}}
+      </ul>
    </section>
    <section>
-      <table class="table">
-         <thead class="thead-default">
-            <tr>
-               <th># 疏散标志</th>
-               <th>名称</th>
-               <th>型号</th>
-               <th>价格</th>
-            </tr>
-         </thead>
-         <tbody>
-            <tr>
-               <th scope="row">1</th>
-               <td>Mark</td>
-               <td>Otto</td>
-               <td>1元</td>
-            </tr>
-            <tr>
-               <th scope="row">2</th>
-               <td>Jacob</td>
-               <td>Thornton</td>
-               <td>1元</td>
-            </tr>
-            <tr>
-               <th scope="row">3</th>
-               <td>Larry</td>
-               <td>the Bird</td>
-               <td>1元</td>
-            </tr>
-         </tbody>
-      </table>
+      <ul class="list-unstyled">
+         <li class="thead-default">
+            <span># 其它</span>
+            <span>名称</span>
+            <span>型号</span>
+            <span>价格</span>
+         </li>
+         {{#if hasFilteredSigns}}
+            {{#each filteredSigns as |a idx|}}
+               <li>
+                  <span>{{idx}}</span>
+                  <span>{{a.name}}</span>
+                  <span>{{a.specification}}</span>
+                  <span>{{a.salePrice}}</span>
+               </li>
+            {{/each}}
+         {{else}}
+            <li class="m-a">
+               <i class="fa fa-exclamation-triangle"></i>
+               <small>没有相关产品</small>
+            </li>
+         {{/if}}
+      </ul>
    </section>
    <div class="clearfix"></div>
 </div>
