Changed the hight of home map

--- a/app/components/part-client-map/template.hbs
+++ b/app/components/part-client-map/template.hbs
@@ -2,13 +2,15 @@
 <!--百度地图容器-->
 <div id="part-client-map">
    <div id="bmap" class="img-thumbnail"></div>
-   <ul id="client-list" class="list-unstyled p-a">
-      <li class="label label-info m-b p-a-s">我们的客户</li>
-      {{#each clientList as |client|}}
-         <li> <small>></small> <a> {{client.title}} </a> </li>
-      {{/each}}
-      <li id="become-client">
+   <div id="right">
+      <ul id="client-list" class="list-unstyled p-a">
+         <li class="label label-info m-b p-a-s">我们的客户</li>
+         {{#each clientList as |client|}}
+            <li> <small>></small> <a> {{client.title}} </a> </li>
+         {{/each}}
+      </ul>
+      <div id="become-client">
          <button class="btn btn-primary">成为我们的客户</button>
-      </li>
-   </ul>
+      </div>
+   </div>
 </div>
