--- a/app/components/part-client-map/style.scss
+++ b/app/components/part-client-map/style.scss
@@ -9,26 +9,29 @@
       bottom: 0;
       left: 0;
    }
-   #client-list {
-      display: inline-block;
-      vertical-align: top;
+   #right {
       width: 300px;
       position: absolute;
       right: 0;
       top: 0;
       bottom: 0;
-      overflow: scroll;
-      color: white;
-      background-color: rgba(0,0,0,0.6);
-      margin-bottom: 0;
-      li {
-         a {
-            color: white;
+      overflow-y: scroll;
+      #client-list {
+         color: white;
+         height: 100%;
+         background-color: rgba(0,0,0,0.6);
+         margin-bottom: 0;
+         li {
+            a {
+               color: white;
+            }
          }
       }
-   }
-   #become-client {
-      text-align: center;
-      margin-top: 2rem;
+      #become-client {
+         width: 100%;
+         position: absolute;
+         bottom: 2rem;
+         text-align: center;
+      }
    }
 }
