--- a/app/root/contact/style.scss
+++ b/app/root/contact/style.scss
@@ -1,7 +1,6 @@
-img.full {
-   width: 100%;
-}
-#contact-map {
-   height: 500px;
-   position: relative;
+#root-contact {
+   #contact-map {
+      height: 70vh;
+      position: relative;
+   }
 }
