--- a/app/root/product/template.hbs
+++ b/app/root/product/template.hbs
@@ -1,7 +1,7 @@
 <div id="product">
-   <div id="head">
-      <img class="full" src="/images/home-3.jpg">
-   </div>
+   {{#if isSearching}}{{else}}
+      <!-- {{part-carousel}} -->
+   {{/if}}
    <section>
       <ul class="list-unstyled">
          <li class="thead-default">
