--- a/app/root/template.hbs
+++ b/app/root/template.hbs
@@ -9,7 +9,7 @@
       <li class="nav-item">
          {{#link-to "root.home" class="nav-link"}} 首页 {{/link-to}}
       </li>
-      <li class="nav-item">
+      <li class="nav-item" {{action "showAllProducts"}}>
          {{#link-to "root.product" class="nav-link"}} 所有产品 {{/link-to}}
       </li>
       <li class="nav-item">
