--- a/app/styles/pods.scss
+++ b/app/styles/pods.scss
@@ -5,3 +5,4 @@
 @import "app/components/part-client-map/style";
 @import "app/components/part-contact-map/style";
 @import "app/root/product/style";
+@import "app/components/part-carousel/style";
