--- a/app/root/home/style.scss
+++ b/app/root/home/style.scss
@@ -1,11 +1,11 @@
 #home {
    #section-1 {
-      button {
+      position: relative;
+      .btn {
          position: absolute;
          right: 5.5%;
          bottom: 60px;
       }
-      position: relative;
    }
 
    #section-2 {
