--- a/app/root/home/template.hbs
+++ b/app/root/home/template.hbs
@@ -1,10 +1,10 @@
 <div id="home">
    <section id="section-1">
-      <img class="full" src="/images/home-1.jpg">
-      <button class="btn btn-danger">
-         5kg干粉灭火器
+      {{part-carousel}}
+      {{#link-to "root.product" class="btn btn-danger"}}
+         产品列表
          <i class="fa fa-angle-double-right"></i>
-      </button>
+      {{/link-to}}
    </section>
    <section id="section-2">
       <h4>维修中心</h4>
@@ -58,10 +58,10 @@
          <h4 class="underlined">联系我们</h4>
          <div class="col-md-6">
             <h6>
-               {{#link-to "root.contact"}}
-                  天津市金凯达成消防设备有限公司
-                  <i class="fa fa-angle-double-right"></i>
-               {{/link-to}}
+            {{#link-to "root.contact"}}
+            天津市金凯达成消防设备有限公司
+            <i class="fa fa-angle-double-right"></i>
+            {{/link-to}}
             </h6>
             <small>红桥区芥园道明华里1号楼3门102号底商</small>
             <a href="/images/certificate.jpg" target="_blank">
@@ -78,55 +78,14 @@
       </div>
       <div class="col-md-6">
          <h4 class="underlined">常见问题</h4>
-            <ul>
-               {{#each QAList as |qa|}}
-                  <li>
-                     <a>{{qa.q.title}}</a>
-                  </li>
-               {{/each}}
-            </ul>
+         <ul>
+            {{#each QAList as |qa|}}
+            <li>
+               <a>{{qa.q.title}}</a>
+            </li>
+            {{/each}}
+         </ul>
       </div>
       <div class="clearfix"></div>
-      <!--       <div id="qa" class="card-img-overlay">
-         <div class="popover popover-right ask">
-            <div class="popover-arrow"></div>
-            <h3 class="popover-title">为什么选择金凯达成消防?</h3>
-            <div class="popover-content">
-               <p>众多消防安全设备销售商，我该如何选择?</p>
-            </div>
-         </div>
-         <div class="popover popover-left ans">
-            <div class="popover-arrow"></div>
-            <h3 class="popover-title">我们安全、专业、高效率</h3>
-            <div class="popover-content">
-               <p>天津市金凯达成消防器材服务于本市20多家大型民营、政府企业机构</p>
-            </div>
-         </div>
-         <div class="clearfix"></div>
-         <div class="popover popover-right ask">
-            <div class="popover-arrow"></div>
-            <h3 class="popover-title">你们的业务范围?</h3>
-            <div class="popover-content">
-               <p>除了销售、维修灭火器材和安全设备，你们还提供什么服务?</p>
-            </div>
-         </div>
-         <div class="popover popover-left ans">
-            <div class="popover-arrow"></div>
-            <h3 class="popover-title">培训您的员工使用灭火设备</h3>
-            <div class="popover-content">
-               <p>我们了解到很多企业消防设施齐全，可是员工们并不会使用。因此，除了销售和维修之外，我们还可以到您的企业向员工演示灭火器使用方法。</p>
-            </div>
-         </div>
-         <div class="clearfix"></div>
-         <div class="popover popover-left ans">
-            <div class="popover-arrow"></div>
-            <h3 class="popover-title">安装应急设备</h3>
-            <div class="popover-content">
-               <p>除了销售应急灯、摄像头、疏散标志外，我们还可以到您的企业安装这些设备。</p>
-            </div>
-         </div>
-         <div class="clearfix"></div>
-      </div> -->
-      <!-- <img src="/images/tianjin-explosion-2015.jpg"> -->
    </section>
 </div>
