--- a/app/root/home/template.hbs
+++ b/app/root/home/template.hbs
@@ -2,18 +2,22 @@
    <section id="section-1">
       {{part-carousel}}
       {{#link-to "root.product" class="btn btn-danger"}}
-         产品列表
-         <i class="fa fa-angle-double-right"></i>
+      产品列表
+      <i class="fa fa-angle-double-right"></i>
       {{/link-to}}
    </section>
    <section id="section-2">
-      <h4>维修中心</h4>
+      <h4>生产中心</h4>
       <ul class="list-unstyled col-md-4">
          {{#each productListCol1 as |product|}}
          <li class="card-block">
             <img src="{{product.img}}" class="img-circle card-img-left pull-left">
             <div class="text pull-right">
-               <h6>{{product.name}}</h6>
+               <h6>
+               {{product.name}}
+               <span class="label label-warning">修</span>
+               <span class="label label-info">售</span>
+               </h6>
                <small class="text-muted">{{product.description}}</small>
             </div>
             <div class="clearfix"></div>
@@ -25,7 +29,10 @@
          <li class="card-block">
             <img src="{{product.img}}" class="img-circle card-img-left pull-left">
             <div class="text pull-right">
-               <h6>{{product.name}}</h6>
+               <h6>
+                  {{product.name}}
+                  <span class="label label-info">售</span>
+               </h6>
                <small class="text-muted">{{product.description}}</small>
             </div>
             <div class="clearfix"></div>
@@ -37,7 +44,10 @@
          <li class="card-block">
             <img src="{{product.img}}" class="img-circle card-img-left pull-left">
             <div class="text pull-right">
-               <h6>{{product.name}}</h6>
+               <h6>
+                  {{product.name}}
+                  <span class="label label-info">售</span>
+               </h6>
                <small class="text-muted">{{product.description}}</small>
             </div>
             <div class="clearfix"></div>
