--- a/app/root/template.hbs
+++ b/app/root/template.hbs
@@ -3,14 +3,14 @@
    <small>
    <i class="fa fa-fire"></i>
    </small>
-   天津市金凯达成消防
+   天津市金凯达成消防设备有限公司
    {{/link-to}}
    <ul class="nav navbar-nav">
       <li class="nav-item">
          {{#link-to "root.home" class="nav-link"}} 首页 {{/link-to}}
       </li>
       <li class="nav-item" {{action "showAllProducts"}}>
-         {{#link-to "root.product" class="nav-link"}} 所有产品 {{/link-to}}
+         {{#link-to "root.product" class="nav-link"}} 产品价格 {{/link-to}}
       </li>
       <li class="nav-item">
          {{#link-to "root.contact" class="nav-link"}} 联系我们 {{/link-to}}
